fixed spacing in about section

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@ nav > a:hover, #contact > a:hover{
 }
 
 #first{
-  padding-top: 100px;
   padding-bottom: 200px;
   color: #FFF;
   text-align: center;
@@ -65,11 +64,8 @@ nav > a:hover, #contact > a:hover{
   border-radius: 150px;
   background-color: #00F;
   position: relative;
-  float: right;
-  margin-left: 15px;
-  right: 5px;
-  top: -10px;
-  z-index: 1;
+  margin: 0 auto;
+
 }
 
 
